<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmar_datos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.com.formulariocontacto.ConfirmarDatos">

    <TextView
        android:id="@+id/tvdatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textconfirmarDatos"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/lytop"
        >
        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre"
            android:textStyle="bold"
            android:textSize="@dimen/texto"
            />
        <TextView
            android:id="@+id/tconfDatosNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:paddingLeft="@dimen/Fieldleft"
            android:textSize="@dimen/texto"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/lytop"
        >
        <TextView
            android:id="@+id/tvfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_fecha"
            android:textSize="@dimen/texto"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tconfDatosFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:paddingLeft="@dimen/Fieldleft"
            android:textSize="@dimen/texto"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/lytop"
        >
        <TextView
            android:id="@+id/tvtel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_telefono"
            android:textSize="@dimen/texto"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tconfDatosTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:paddingLeft="@dimen/Fieldleft"
            android:textSize="@dimen/texto"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/lytop"
        >
        <TextView
            android:id="@+id/tvemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textSize="@dimen/texto"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tconfDatosEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:paddingLeft="@dimen/Fieldleft"
            android:textSize="@dimen/texto"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/lytop"
        >
        <TextView
            android:id="@+id/tvdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_descripcion"
            android:textSize="@dimen/texto"
            android:paddingLeft="@dimen/Fieldleft"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/tconfDatosDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:paddingLeft="@dimen/Fieldleft"
            android:textSize="@dimen/texto"
            />
    </LinearLayout>


    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btnEditar"
        />

</LinearLayout>
